--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -17,12 +17,12 @@
 				<h3 class="panel-title">Please sign in</h3>
 			</div>
 			<div class="panel-body">
-				<form accept-charset="UTF-8" role="form">
+				<form accept-charset="UTF-8" role="form" ng-submit="login()">
 					<fieldset>
 						<div class="form-group">
-							<input class="form-control" placeholder="Username" name="username" type="text" ng-model="nickname">
+							<input class="form-control" placeholder="Username" name="username" type="text" ng-model="nickname" ng-minlength="3" ng-maxlength="10">
 						</div>
-						<input class="btn btn-lg btn-success btn-block" type="submit" value="Login" ng-click="login()">
+						<input class="btn btn-lg btn-success btn-block" type="submit" value="Login" >
 						<h3>Your name is now: {{nickname}}</h3>
 					</fieldset>
 				</form>
