--- a/src/partials/rooms.html
+++ b/src/partials/rooms.html
@@ -110,7 +110,7 @@
         
         <div class="panel-body">
           <form class="form-inline" name="createRoomForm" ng-submit="createRoom(roomName)">
-            <div class="form-group">
+            <div class="form-group createRoomFormGroup">
               <label for="roomName"></label>
               <input type="text" name="nameOfRoom" required class="form-control" id="roomName" placeholder="What's the name of your room?" ng-model="roomName">
             </div>
