Trimmed html files of css styles, put into css file

--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -22,7 +22,7 @@
 				<form accept-charset="UTF-8" role="form" ng-submit="login()">
 					<fieldset>
 						<div class="form-group">
-							<input class="form-control" placeholder="Username" name="username" type="text" ng-model="nickname" ng-minlength="3" ng-maxlength="10">
+							<input class="form-control" placeholder="Username" name="username" type="text" ng-model="nickname">
 						</div>
 						<input class="btn btn-lg btn-success btn-block" type="submit" value="Login" >
 						<h3>Your name is now: {{nickname}}</h3>
