--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,6 @@ body {
 	text-align: center;
 }
 .roomUserList {
-	float: right;
 	overflow: auto;
 	height: 500px;
 }
@@ -37,7 +36,7 @@ body {
 	width: 6.1%;
 }
 #divFormGroup {
-	width: 76.8%;
+	width: 77.2%;
 	float: left;
 }
 .topic {
@@ -116,15 +115,27 @@ body {
 	margin-top: 1%;
 }
 .allUsersList {
-	column-count:5;
-    -webkit-column-count:5;
-    -moz-column-count:5;
+	column-count:10;
+    -webkit-column-count:10;
+    -moz-column-count:10;
     list-style-type: none;
 }
 .createRoomFormGroup{
-	width: 20%;
+	width: 45%;
 	margin-top: -20px;
 }
 #roomName{
 	width: 100%;
+}
+i.glyphicon.glyphicon-remove{
+	float: right;
+}
+.userInRoom {
+	width: 100%;
+}
+.vcenter{
+	margin-top: 1%;
+}
+.modal-body{
+	text-align: -webkit-center;
 }
